--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "gulp-jscodeshift",
-    "version": "1.0.0",
+    "version": "0.1.0",
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "tsc -p tsconfig",
+        "build": "tsc -p tsconfig.json",
         "test": "gulp test"
     },
     "keywords": [],
