--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
     "license": "ISC",
     "dependencies": {
     "devDependencies": {
+        "@types/chai": "^4.0.4",
         "@types/gulp": "^4.0.5",
         "@types/gulp-util": "^3.0.33",
         "@types/lodash": "^4.14.80",
         "@types/mocha": "^2.2.44",
         "@types/node": "^8.0.47",
+        "@types/sinon-chai": "^2.7.29",
         "@types/through2": "^2.0.33",
         "gulp": "^3.9.1",
         "jscodeshift": "^0.3.32",
         "lodash": "^4.17.4",
         "babel-preset-es2015": "^6.24.1",
         "babel-register": "^6.26.0",
+        "chai": "^4.1.2",
         "del": "^3.0.0",
         "mocha": "^4.0.1",
+        "sinon-chai": "^2.14.0",
         "typescript": "^2.6.1"
     },
     }
