--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "author": "Navid Nikpour <navid@nikpour.com>",
     "license": "ISC",
     "dependencies": {
+        "gulp": "^3.9.1",
+        "gulp-util": "^3.0.8",
+        "jscodeshift": "^0.3.32"
+    },
     "devDependencies": {
         "@types/chai": "^4.0.4",
         "@types/gulp": "^4.0.5",
@@ -20,9 +24,6 @@
         "@types/node": "^8.0.47",
         "@types/sinon-chai": "^2.7.29",
         "@types/through2": "^2.0.33",
-        "gulp": "^3.9.1",
-        "jscodeshift": "^0.3.32",
-        "lodash": "^4.17.4",
         "babel-preset-es2015": "^6.24.1",
         "babel-register": "^6.26.0",
         "chai": "^4.1.2",
