Adds 'serve:coverage' task for viewing html report of code coverage locally

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "serve:coverage": "live-server --port=1234 coverage",
         "build": "gulp clean && tsc -p tsconfig.json",
         "test": "nyc mocha --require babel-register test/**/*.spec.js"
     },
