--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "babel-register": "^6.26.0",
         "chai": "^4.1.2",
         "del": "^3.0.0",
+        "live-server": "^1.2.0",
         "mocha": "^4.0.1",
         "nyc": "^11.3.0",
         "sinon-chai": "^2.14.0",
