Adds fake lint script to test build pipeline

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "serve:coverage": "live-server --port=1234 coverage",
         "build": "gulp clean && tsc -p tsconfig.json",
         "test": "nyc mocha --require babel-register test/**/*.spec.js",
-        "lint": ""
+        "lint": "echo \"Skip linting for build pipeline\" && exit 0"
     },
     "keywords": [],
     "author": "Navid Nikpour <navid@nikpour.com>",
