--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "serve:coverage": "live-server --port=1234 coverage",
         "build": "gulp clean && tsc -p tsconfig.json",
-        "test": "JUNIT_REPORT_PATH=./junit/report.xml nyc mocha --colors --require babel-register --reporter mocha-jenkins-reporter test/**/*.spec.js"
+        "test": "nyc mocha --require babel-register --reporter mocha-jenkins-reporter test/**/*.spec.js"
     },
     "keywords": [],
     "author": "Navid Nikpour <navid@nikpour.com>",
