--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
     "version": "0.1.0",
     "description": "",
     "main": "index.js",
-    "publishConfig": {
-        "registry": "http://46.101.155.92:8081/repository/vmt-internal/"
-    },
     "scripts": {
         "serve:coverage": "live-server --port=1234 coverage",
         "build": "gulp clean && tsc -p tsconfig.json",
@@ -28,7 +25,6 @@
         "@types/node": "^8.0.47",
         "@types/sinon-chai": "^2.7.29",
         "@types/through2": "^2.0.33",
-        "@vmt/nyc-config": "^0.1.0",
         "babel-preset-es2015": "^6.24.1",
         "babel-register": "^6.26.0",
         "chai": "^4.1.2",
@@ -41,6 +37,15 @@
         "typescript": "^2.6.1"
     },
     "nyc": {
-      "extends": "@vmt/nyc-config"
+      "check-coverage": true,
+      "per-file": true,
+      "watermarks": {
+        "lines": [80, 95],
+        "statements": [80, 95],
+        "functions": [80, 95],
+        "branches": [80, 95]
+      },
+      "reporter": ["lcov", "html", "text-summary"],
+      "exclude": ["**/*.spec.js", "dist"]
     }
 }
