Changes directory for custom types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "strict": true,
         "typeRoots": [
           "./node_modules/@types",
-          "./@types"
+          "./src/@types"
         ],
         "types":[
           "jscodeshift"
