Add dist folder to config files

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "gulp-jscodeshift",
     "version": "0.1.0",
     "description": "",
-    "main": "index.js",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "scripts": {
         "serve:coverage": "live-server --port=1234 coverage",
         "build": "gulp clean && tsc -p tsconfig.json",
