--- a/package.json
+++ b/package.json
@@ -1,71 +1,90 @@
 {
-    "name": "gulp-jscodeshift",
-    "version": "0.4.0",
-    "description": "",
-    "main": "dist/lib/jscodeshift.js",
-    "types": "dist/lib/jscodeshift.d.ts",
-    "scripts": {
-        "serve:coverage": "live-server --port=1234 coverage",
-        "build": "gulp clean && tsc -p tsconfig.json",
-        "test": "nyc mocha --require babel-register --reporter mocha-jenkins-reporter test/**/*.spec.js"
+  "name": "gulp-jscodeshift",
+  "version": "0.4.0",
+  "description": "",
+  "main": "dist/lib/jscodeshift.js",
+  "types": "dist/lib/jscodeshift.d.ts",
+  "keywords": [],
+  "author": "Navid Nikpour <navid@nikpour.com>",
+  "license": "MIT",
+  "dependencies": {
+    "gulp-util": "^3.0.8",
+    "jscodeshift": "^0.3.32",
+    "lodash": "^4.17.4",
+    "through2": "^2.0.3"
+  },
+  "peerDependencies": {
+    "gulp": "^3.9.1"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.0.4",
+    "@types/gulp": "^4.0.5",
+    "@types/gulp-util": "^3.0.33",
+    "@types/lodash": "^4.14.80",
+    "@types/mocha": "^2.2.44",
+    "@types/node": "^8.0.47",
+    "@types/sinon-chai": "^2.7.29",
+    "@types/through2": "^2.0.33",
+    "@types/vinyl": "^2.0.2",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.2.3",
+    "live-server": "^1.2.0",
+    "mocha": "^4.0.1",
+    "mocha-jenkins-reporter": "^0.3.10",
+    "nyc": "^11.3.0",
+    "sinon-chai": "^2.14.0",
+    "source-map-support": "^0.5.0",
+    "ts-node": "^4.1.0",
+    "typescript": "^2.6.1"
+  },
+  "scripts": {
+    "serve:coverage": "live-server --port=1234 coverage",
+    "prebuild": "gulp clean",
+    "build": "gulp build",
+    "test": "nyc mocha"
+  },
+  "nyc": {
+    "check-coverage": true,
+    "per-file": true,
+    "watermarks": {
+      "lines": [
+        80,
+        95
+      ],
+      "statements": [
+        80,
+        95
+      ],
+      "functions": [
+        80,
+        95
+      ],
+      "branches": [
+        80,
+        95
+      ]
     },
-    "keywords": [],
-    "author": "Navid Nikpour <navid@nikpour.com>",
-    "license": "ISC",
-    "dependencies": {
-        "gulp": "^3.9.1",
-        "gulp-util": "^3.0.8",
-        "jscodeshift": "^0.3.32"
-    },
-    "devDependencies": {
-        "@types/chai": "^4.0.4",
-        "@types/gulp": "^4.0.5",
-        "@types/gulp-util": "^3.0.33",
-        "@types/lodash": "^4.14.80",
-        "@types/mocha": "^2.2.44",
-        "@types/node": "^8.0.47",
-        "@types/sinon-chai": "^2.7.29",
-        "@types/through2": "^2.0.33",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-register": "^6.26.0",
-        "chai": "^4.1.2",
-        "del": "^3.0.0",
-        "live-server": "^1.2.0",
-        "mocha": "^4.0.1",
-        "mocha-jenkins-reporter": "^0.3.10",
-        "nyc": "^11.3.0",
-        "sinon-chai": "^2.14.0",
-        "typescript": "^2.6.1"
-    },
-    "nyc": {
-        "check-coverage": true,
-        "per-file": true,
-        "watermarks": {
-            "lines": [
-                80,
-                95
-            ],
-            "statements": [
-                80,
-                95
-            ],
-            "functions": [
-                80,
-                95
-            ],
-            "branches": [
-                80,
-                95
-            ]
-        },
-        "reporter": [
-            "lcov",
-            "html",
-            "text-summary"
-        ],
-        "exclude": [
-            "**/*.spec.js",
-            "dist"
-        ]
-    }
+    "require": [
+      "ts-node/register"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "reporter": [
+      "lcov",
+      "html",
+      "text-summary"
+    ],
+    "sourceMap": true,
+    "instrument": true,
+    "include": [
+      "src/lib/**/*.ts"
+    ],
+    "exclude": [
+      "test/**/*.js"
+    ]
+  }
 }
